--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   padding: 4px;
   color: white;
   /* text-align: center; */
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Inter";
   text-transform: uppercase;
 }
 .input-container {
@@ -31,20 +31,20 @@ body {
   margin-left: 10px;
   width: 70%;
   height: 40px;
-  border-radius: 25px;
+  border-radius: 20px;
   border: 1px solid black;
   padding-left: 10px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
   outline: none;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: large;
+  font-family: "Inter";
+  font-size: 16px;
 }
 .add-btn {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: none;
-  background-color: #316fc1;
+  background-color: #4f5ad3;
   color: white;
   font-weight: bolder;
   font-size: larger;
